# Audio2Array

./: Audio2Array.sln  Audio2Array.vcxproj  Audio2Array.vcxproj.filters  AudioConverter.cpp  AudioConverter.h  CMakeLists.txt  MP3Reader.cpp  MP3Reader.h  README.md  ReaderInterface.h  SoundCalculator.cpp  SoundCalculator.h  WAVReader.cpp  WAVReader.h  excluded_files.txt  main.cpp  main.h
